Fix shadows in dark mode

--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -31,7 +31,7 @@ $color-accent: #f5f5f5 !default;
 $color-background: #ffffff !default;
 $color-active: #eeeeee !default;
 
-$dark-color-main: #ffffff !default;
+$dark-color-main: #E0E0E0 !default;
 $dark-color-secondary: #757575 !default;
 $dark-color-accent: #424242 !default;
 $dark-color-background: #212121 !default;
@@ -45,12 +45,15 @@ $shadow-level-0: 0 0 0 0 rgba(0, 0, 0, 0.2);
 
 /* level 1 */
 $shadow-level-1: 0 1px 3px 1px rgba(0, 0, 0, 0.2);
+$dark-shadow-level-1: 0 1px 3px 1px rgba(0, 0, 0, 0.6);
 
 /* level 2 */
 $shadow-level-2: 0 2px 6px 1px rgba(0, 0, 0, 0.2);
+$dark-shadow-level-2: 0 2px 6px 1px rgba(0, 0, 0, 0.6);
 
 /* level 2 inversed */
 $shadow-level-2-i: 0 -2px 6px 1px rgba(0, 0, 0, 0.2);
+$dark-shadow-level-2-i: 0 -2px 6px 1px rgba(0, 0, 0, 0.6);
 
 /*---------------------------------------
   Font sizing
@@ -643,6 +646,7 @@ header.hero > h1 {
 }
 
 .dark .betta-banner {
+  box-shadow: $dark-shadow-level-1;
   background: $dark-color-background;
 }
 
@@ -975,6 +979,10 @@ form textarea {
   top: 0;
   box-shadow: $shadow-level-2;
 }
+
+.dark #betta_menu.stick {
+  box-shadow: $dark-shadow-level-2;
+}
 /*-------------------*/
 
 #betta_menu ul {
@@ -1115,6 +1123,10 @@ form textarea {
     padding: 0.25rem 0 0.5rem 0;
     box-shadow: $shadow-level-2-i;
     overflow: hidden;
+  }
+
+  .dark #betta_menu.toolbar {
+    box-shadow: $dark-shadow-level-2-i;
   }
 
   #betta_menu.toolbar > ul {
@@ -1296,6 +1308,7 @@ button {
 }
 
 .dark button {
+  box-shadow: $dark-shadow-level-1;
   background: $dark-color-secondary;
 }
 
@@ -1621,6 +1634,7 @@ between lines
 }
 
 .dark .photo > img {
+  box-shadow: $dark-shadow-level-2;
   background: $dark-color-accent;
 }
 
@@ -1731,6 +1745,7 @@ a.card {
 }
 
 .dark a.card {
+  box-shadow: $dark-shadow-level-2;
   border-color: $dark-color-secondary;
 }
 
@@ -1961,6 +1976,7 @@ a.card-double {
 }
 
 .dark a.card-double {
+  box-shadow: $dark-shadow-level-2;
   border-color: $dark-color-secondary;
 }
 
@@ -2172,8 +2188,12 @@ a.card-double:active {
   height: 100%;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: $shadow-level-2;
   border-radius: 0.25rem;
+}
+
+.dark .flip-card > .card {
+  box-shadow: $dark-shadow-level-2;
 }
 
 .flip-card:hover > .card,
@@ -2324,6 +2344,7 @@ a.card-double:active {
 }
 
 .dark .lightbox .middle .caption {
+  box-shadow: $dark-shadow-level-2;
   background: $dark-color-background;
 }
 
@@ -2423,6 +2444,10 @@ p.version {
   height: 15rem;
   border: 0;
   border-radius: 0.25rem;
-  box-shadow: $shadow-level-2;
+  box-shadow: $shadow-level-1;
+}
+
+.dark .google-maps {
+  box-shadow: $dark-shadow-level-2;
 }
 /*-------------------------------------*/
